--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>hello this</title>
 </head>
-<body>
- <h1 style="bg">   HELLO THIS IS GIT </h1>
+<body style="background-color: yellow;">
+ <h1 style="color: blue;text-align: center;font-size: larger;font-weight: 200;">   HELLO THIS IS GIT </h1>
  
 </body>
 </html>
